--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,4 +162,10 @@
     <string name="txt_designe_theme">Tema</string>
     <string name="txt_language_securitate">Limba</string>
     <string name="assortment_possible_not_download">Assortimentul posibil nu este descarcat.</string>
+    <string name="msg_barcode_empty">Codul de bare nu este setat!</string>
+    <string name="msg_select_revizie">Alegeți o revizie!</string>
+    <string name="msg_list_warehouses_null">Lista de depozite disponibile este goală! Dacă ați schimbat conexiunea,reintrați in program!</string>
+    <string name="securitate_download_version">Descarcă</string>
+    <string name="versiune_server_securitate">Versiunea de pe server: </string>
+    <string name="versiune_locala_securitate">Versiunea instalată: </string>
 </resources>
