Change for input double count

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -170,4 +170,5 @@
     <string name="securitate_download_version">Download</string>
     <string name="versiune_server_securitate">The version on the server:</string>
     <string name="versiune_locala_securitate">Installed version:</string>
+    <string name="sales_count_only_integer">Only integer number</string>
 </resources>
