--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,4 +168,5 @@
     <string name="securitate_download_version">Descarcă</string>
     <string name="versiune_server_securitate">Versiunea de pe server: </string>
     <string name="versiune_locala_securitate">Versiunea instalată: </string>
+    <string name="sales_count_only_integer">Doar numere intregi</string>
 </resources>
