--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -210,4 +210,7 @@
     <string name="item_created">Assortment added!</string>
     <string name="error_create_item">"Error: "</string>
     <string name="buttonCreate">Create item</string>
+    <string name="provider_button">Provider</string>
+    <string name="hint_search_provider">Search provider</string>
+    <string name="btn_adauga_client_search">Adauga client</string>
 </resources>
